Make it look a little nicer.

--- a/writeups/2016/first-stab-at-yeast/first-stab-at-yeast.tex
+++ b/writeups/2016/first-stab-at-yeast/first-stab-at-yeast.tex
@@ -1,11 +1,6 @@
-\documentclass[12pt]{article}
-\usepackage{amssymb,amsmath,latexsym, listings, graphicx, hyperref}
+\documentclass[12pt, a4paper]{article}
+\usepackage{latexsym, listings, graphicx, hyperref}
 
-% Page length commands go here in the preamble
-\setlength{\oddsidemargin}{-0.25in} % Left margin of 1 in + 0 in = 1 in
-\setlength{\textwidth}{7in}   % Right margin of 8.5 in - 1 in - 6.5 in = 1 in
-\setlength{\topmargin}{-.75in}  % Top margin of 2 in -0.75 in = 1 in
-\setlength{\textheight}{9.2in}  % Lower margin of 11 in - 9 in - 1 in = 1 in
 
 \lstset{language=bash}  
 
@@ -15,6 +10,7 @@
 \renewcommand{\baselinestretch}{1.5} % 1.5 denotes double spacing. Changing it will change the spacing
 
 \setlength{\parindent}{0in} 
+
 \begin{document}
 \title{Testing Raspberry Pi  based \\ microscope camera \\ on  growth
   of \\  household yeast}
@@ -228,7 +224,8 @@ future. Here are the ones I remember while writing this document.
 \section{References}
 
 
-tbd.
+Watching bread yeast make bubbles: 
+http://www2.mrc-lmb.cam.ac.uk/microscopes4schools/yeast.php
 
 
 \end{document}
